# airflow_chess

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
config/: airflow.cfg
dags/: chess_pipeline.py  dbt_chess_dag.py
diagrams/: airflow_diagram.excalidraw
shell/: 0_curl_base_docker_yaml.sh  1_init_structure.sh  2_init_airflow_cfg.sh  3_init_airflow_db.sh
