[project]
name = "airflow-chess"
version = "0.1.0"
description = "Python environment for running DAGs on airflow server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "astro-sdk-python>=1.8.1",
    "astronomer-cosmos[dbt]>=1.10.1",
]

[tool.uv]
override-dependencies = [
    "flask<2.3",
    "connexion<2.14",
    "werkzeug<3.0.0",
]
